src/objects/BVAT_Content__c.object
<CustomObject>
    <description>BVAT Content Form</description>
    <fields>
        <fullName>Accessible_FCP__c</fullName>
        <description>FCP Information avenues accessible to the farmer</description>
        <label>Accessed FCP Avenue</label>
        <picklist>
            <picklistValues>
                <fullName>TOF Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOF Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infonet-Biovision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mkulima Mbunifu</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Animal_Keeping_Key_Areas__c</fullName>
        <description>Areas of interest under Animal Keeping</description>
        <label>Animal Keeping Key Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Animal husbandry and welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock species and commercial insects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock health and diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoonotic diseases</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Animal_Keeping__c</fullName>
        <description>Areas trained under Animal Keeping</description>
        <label>Animal Keeping</label>
        <picklist>
            <picklistValues>
                <fullName>Animal husbandry and welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock species and commercial insects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock health and diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoonotic diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fodder production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal products</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CIW__c</fullName>
        <description>The CIW who collected this information</description>
        <label>CIW</label>
        <referenceTo>CIW__c</referenceTo>
        <relationshipLabel>BVAT Contents</relationshipLabel>
        <relationshipName>BVAT_Contents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Areas_Trained__c</fullName>
        <description>Information content areas trained</description>
        <label>Content Areas Trained</label>
        <picklist>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crop management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Crop_Management_Key_Areas__c</fullName>
        <description>Keys areas of interest under Crop Management</description>
        <label>Crop Management Key Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Crops fruits vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and disease management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicinal plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural pest control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fodder production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Crop_Management__c</fullName>
        <description>Areas trained under Crop Management</description>
        <label>Crop Management</label>
        <picklist>
            <picklistValues>
                <fullName>Crops fruits vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fodder production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pests diseases weeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruit and vegetable processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural pest control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural practices</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environment_Key_Areas__c</fullName>
        <description>Key areas of interest under Environment</description>
        <label>Environment Key Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Agro-ecological zones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable and organic agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservation agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing and Value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable energy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Areas Trained under Environment</description>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Agro-ecological zones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable and organic agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservation agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tree agroforestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food processing and value addition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Human_Health_Key_Areas__c</fullName>
        <description>Areas of Interest under Human Health</description>
        <label>Human Health Key Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Healthy Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition related diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insect transmitted diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicinal plants</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Human_Health__c</fullName>
        <description>Areas trained under Human Health</description>
        <label>Human Health</label>
        <picklist>
            <picklistValues>
                <fullName>Healthy Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition related diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insect transmitted diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hygiene and sanitation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Information_Benefits__c</fullName>
        <description>Benefits from the information avenues</description>
        <label>Information Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Improved soil fertility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy produce for consumption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased crop yields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved environmental conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased production for sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced cost of production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better management of pests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved family food security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved animal health and welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better group interactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved Awareness</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Content_Areas__c</fullName>
        <description>Information Content areas of most interest</description>
        <label>Key Content Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crop management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Info_Needs__c</fullName>
        <description>Other Information needs that farmer wants resolved</description>
        <label>Other Info Needs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_TCP_Needs__c</fullName>
        <description>Other needs other than information</description>
        <label>Other TCP Needs</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Useful_TOF_Avenue__c</fullName>
        <description>Most useful FCP Information avenue</description>
        <label>Useful TOF Avenue</label>
        <picklist>
            <picklistValues>
                <fullName>TOF Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOF Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infonet-Biovision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mkulima Mbunifu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BVAT Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>BVAT Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BVAT Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>